--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
+    "dotenv": "^16.5.0",
     "mongodb": "^6.17.0"
   }
 }
