--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ MONGODB_URI=mongodb+srv://victor:manoelvictor14@marketplace.msyyxna.mongodb.net/
 
 # Configuração de autenticação
 JWT_SECRET=meuSegredoSuperSecreto123!@#
+
+# Configurações de feedback
+EMAIL_USER=contato.ecomarketsamavi@gmail.com
+EMAIL_PASS=whsvzeohyrmidvlf
+EMAIL_RECEIVER=v.m.f.marques40@gmail.com
