--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "dotenv": "^16.5.0",
-    "mongodb": "^6.17.0"
+    "mongodb": "^6.17.0",
+    "nodemailer": "^7.0.5"
   }
 }
