funções do carrinho, pedido e notificação no email

--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ JWT_SECRET=meuSegredoSuperSecreto123!@#
 EMAIL_USER=contato.ecomarketsamavi@gmail.com
 EMAIL_PASS=whsvzeohyrmidvlf
 EMAIL_RECEIVER=v.m.f.marques40@gmail.com
+
+# Configurações de Pedidos
+EMAIL_SENDER=contato.ecomarketsamavi@gmail.com
+EMAIL_PASSWORD=whsvzeohyrmidvlf
